--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "repository": { "type": "git", "url": "git@bitbucket.org:dead_horse/keydiarywx.git" },
   "dependencies": {
     "connect": "2.7.2",
-    "wechat": "0.3.5"
+    "wechat": "0.3.5",
+    "urllib": "0.3.4",
+    "utility": "0.0.3",
+    "moment": "2.0.0"
   },
   "devDependencies": {
     "mocha": "*",
