--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "jscover": ">=0.2.0"
+    "jscover": ">=0.2.0",
+    "mm": "*"
   },
   "main": "app.js"
 }
